integration_tests/codegen_fail/fail/union/derive_wrong_item.stderr
warning: field is never read: `enum_path`
   --> $DIR/mod.rs:282:5
    |
282 |     pub enum_path: Option<TokenStream>,
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: field is never read: `span`
   --> $DIR/mod.rs:296:5
    |
296 |     pub span: Span,
    |     ^^^^^^^^^^^^^^

warning: 2 warnings emitted

error: GraphQL union can only be derived for enums and structs
 --> $DIR/derive_wrong_item.rs:4:1
  |
4 | union Character { id: i32 }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
